fix blurry render in some browser
update docs
bump version to 1.0.2

--- a/src/sass/dialogify.scss
+++ b/src/sass/dialogify.scss
@@ -34,40 +34,14 @@
     p{
       line-height: 1.5;
     }
-    &.pixel-style:before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 9px;
-        bottom: 9px;
-        left: -9px;
-        right: -9px;
-        background: #FFF;
-        z-index: -1;
-    }
-    &.pixel-style:after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 4px;
-        bottom: 4px;
-        left: -5px;
-        right: -5px;
-        background-color: #FFF;
-        background-image: url(../forum/box-corner.png);
-        background-repeat: no-repeat;
-        background-position: -17px 100%;
-        z-index: -1;
-    }
     &>div {
-        //background-image: url(../dialog/box-corner.png);
         background-repeat: no-repeat;
         background-position: right bottom;
         &:after {
             content: "";
             position: absolute;
             bottom: 0;
-            left: 0; //background-image: url(../dialog/box-corner.png);
+            left: 0;
             width: 20px;
             height: 21px;
             transform: rotate(90deg);
